Improved security/checks